k8s/plane/database/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: plane
spec:
  ports:
  - port: 5432
  selector:
    app: postgres
